--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,6 +11,6 @@
         android:layout_height="100dp"
         android:layout_gravity="center"
         android:text="Skanuj"
-        android:onClick="Scanner" />
+        android:onClick="scanner" />
 
 </LinearLayout>
